# python-generics

./: LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: codeql-analysis.yml  coverage.yml  formatting.yml  no_byte_order_mark.yml  packaging_test.yml  python-publish.yml  pythonlint.yml  unittests.yml
dev_requirements/: requirements-coverage.txt  requirements-formatting.txt  requirements-linting.in  requirements-linting.txt  requirements-packaging.txt  requirements-tests.in  requirements-tests.txt  requirements-type_check.in  requirements-type_check.txt
src/generics/: __init__.py
unittests/: .pylintrc  test_get_filled_type.py  test_get_type_vars.py  test_py_312.py
