[project]
name = "python-generics"
description = "A package to determine the values of generic classes through instances or subclasses "
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Hochfrequenz Unternehmensberatung GmbH", email = "info@hochfrequenz.de" }]
keywords = ["python", "generics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []     # add all the dependencies from requirements.in here, too
dynamic = ["readme", "version"]

[project.optional-dependencies]
coverage = [
    "coverage==7.13.4"
]
formatting = [
    "black==26.1.0",
    "isort==8.0.0"
]
linting = [
    "pylint==4.0.4"
]
spellcheck = [
    "codespell==2.4.1"
]
test_packaging = [
    "build==1.4.0",
    "twine==6.2.0"
]
tests = [
    "pydantic==2.12.5",
    "pytest==9.0.2"
]
type_check = [
    "mypy==1.19.1"
]

[project.urls]
Changelog = "https://github.com/Hochfrequenz/python-generics/releases"
Homepage = "https://github.com/Hochfrequenz/python-generics"

[tool.black]
line-length = 120
target_version = ["py310", "py311", "py312", "py313", "py314"]

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "fixme,too-few-public-methods"

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"



[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_generics_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
